# ActivateTasks

./: .gitignore  README.md  docker-compose.yml  justfile
api-consumer/: .env  Dockerfile  pyproject.toml
api-consumer/app/: main.py  schema.py
api-consumer/app/config/: settings.py
async-api/: .env  pyproject.toml
async-api/app/: main.py  routes.py
async-api/app/api/: exceptions.py  schema.py  service.py  view.py
async-api/app/config/: settings.py
async-api/app/consumer/: schema.py  subscriber.py
async-api/tests/: conftest.py  test_async.py
configure/: .env  pyproject.toml
configure-consumer/: pyproject.toml
configure-consumer/app/: main.py
configure-consumer/app/config/: settings.py
configure/app/: main.py  routes.py
configure/app/api/: view.py
configure/app/config/: settings.py
configure/app/consumer/: schema.py  subscriber.py
configure/app/services/: AService.py
nginx/: nginx.conf
nginx/ssl/: nginx.crt  nginx.key
sync-plug/: .env  pyproject.toml
sync-plug/app/: main.py  routes.py
sync-plug/app/api/: service.py  view.py
sync-plug/app/config/: settings.py
sync-plug/tests/: conftest.py  test_sync.py
