[project]
name = "AsyncApi"
version = "0.1.0"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi>=0.119.0",
    "pydantic-settings>=2.11.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "redis (>=6.4.0,<7.0.0)",
    "uvicorn>=0.37.0",
    "faststream[rabbit] (>=0.6.1,<0.7.0)",
    "fakeredis (>=2.32.0,<3.0.0)",
]

[tool.poetry]
package-mode = false
