[project]
name = "SyncPlug"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi>=0.119.0",
    "pydantic-settings>=2.11.0",
    "pytest>=8.4.2",
    "uvicorn>=0.37.0",
    "aiohttp (>=3.13.0,<4.0.0)",
    "pytest-asyncio (>=1.2.0,<2.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "pytest-env (>=1.2.0,<2.0.0)",
]

[tool.poetry]
package-mode = false

[tool.pytest.ini_options]
env = [
    "DELAY=0"
]